# darkmode

./: .pylintrc  README.md  darkmode.py  pyproject.toml  requirements.txt
